--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -28168,6 +28168,19 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.Sentinels.QuestScepterOfTheQueenSentinels.OnComplete
   nameWithType: QuestScepterOfTheQueenSentinels.OnComplete
+- uid: WarcraftLegacies.Source.Quests.Sentinels.QuestScepterOfTheQueenSentinels.OnFail(MacroTools.FactionSystem.Faction)
+  name: OnFail(Faction)
+  href: api-source/WarcraftLegacies.Source.Quests.Sentinels.QuestScepterOfTheQueenSentinels.html#WarcraftLegacies_Source_Quests_Sentinels_QuestScepterOfTheQueenSentinels_OnFail_MacroTools_FactionSystem_Faction_
+  commentId: M:WarcraftLegacies.Source.Quests.Sentinels.QuestScepterOfTheQueenSentinels.OnFail(MacroTools.FactionSystem.Faction)
+  fullName: WarcraftLegacies.Source.Quests.Sentinels.QuestScepterOfTheQueenSentinels.OnFail(MacroTools.FactionSystem.Faction)
+  nameWithType: QuestScepterOfTheQueenSentinels.OnFail(Faction)
+- uid: WarcraftLegacies.Source.Quests.Sentinels.QuestScepterOfTheQueenSentinels.OnFail*
+  name: OnFail
+  href: api-source/WarcraftLegacies.Source.Quests.Sentinels.QuestScepterOfTheQueenSentinels.html#WarcraftLegacies_Source_Quests_Sentinels_QuestScepterOfTheQueenSentinels_OnFail_
+  commentId: Overload:WarcraftLegacies.Source.Quests.Sentinels.QuestScepterOfTheQueenSentinels.OnFail
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.Sentinels.QuestScepterOfTheQueenSentinels.OnFail
+  nameWithType: QuestScepterOfTheQueenSentinels.OnFail
 - uid: WarcraftLegacies.Source.Quests.Sentinels.QuestScepterOfTheQueenSentinels.RewardDescription
   name: RewardDescription
   href: api-source/WarcraftLegacies.Source.Quests.Sentinels.QuestScepterOfTheQueenSentinels.html#WarcraftLegacies_Source_Quests_Sentinels_QuestScepterOfTheQueenSentinels_RewardDescription
